--- a/src/main/resources/com/baizhi/properties/jdbc.properties
+++ b/src/main/resources/com/baizhi/properties/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.username = root
-jdbc.password = Miword1234*
+jdbc.password = 962482
 jdbc.url =jdbc\:mysql\://localhost\:3306/baizhi?useUnicode\=true&characterEncoding\=UTF-8
