--- a/src/main/resources/com/baizhi/properties/jdbc.properties
+++ b/src/main/resources/com/baizhi/properties/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName = com.mysql.jdbc.Driver
 jdbc.username = root
-jdbc.password = yhm1211
-jdbc.url =jdbc\:mysql\://localhost\:3306/baizhi?useUnicode\=true&characterEncoding\=UTF-8
+jdbc.password = 123456
+jdbc.url =jdbc\:mysql\://59.110.141.165\:3306/baizhi?useUnicode\=true&characterEncoding\=UTF-8
