--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
     <init-param>
       <param-name>exclusions</param-name>
-      <param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
+      <param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*,*.mp4</param-value>
     </init-param>
   </filter>
   <filter-mapping>
